// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createJestConfig should generate files  1`] = `
"import { getJestProjectsAsync } from '@nx/jest';

export default async () => ({
projects: await getJestProjectsAsync()
});"
`;

exports[`createJestConfig should generate files  2`] = `
"const nxPreset = require('@nx/jest/preset').default;

module.exports = { ...nxPreset };"
`;

exports[`createJestConfig should generate files with --js flag 1`] = `
"const { getJestProjectsAsync } = require('@nx/jest');

module.exports = async () => ({
projects: await getJestProjectsAsync()
});"
`;

exports[`createJestConfig should generate files with --js flag 2`] = `
"const nxPreset = require('@nx/jest/preset').default;

module.exports = { ...nxPreset };"
`;
